Document Arrow clients and standalone DuckDB Iceberg CLI